--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,7 @@
 
 @layer components {
 	.markdown {
-		@apply text-lg leading-relaxed;
+		@apply text-lg leading-relaxed tracking-wide;
 	}
 
 	.markdown p,
@@ -28,7 +28,7 @@
 	}
 
 	.markdown h2 {
-		@apply text-3xl mt-12 mb-4 leading-snug;
+		@apply text-3xl mt-12 mb-4 leading-snug font-extrabold;
 	}
 
 	.markdown h3 {
